Fix displaying nav bar on smaller resolutions

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -219,3 +219,9 @@ img {
     width: 90vw;
   }
 }
+
+@media only screen and (max-width: 425px) {
+  nav {
+    width: 90vw;
+  }
+}
